# crdis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
crdis/: cli.py  container.py  summary.py
crdis/codec/: cs_archive.py  cslibu_aes.py
research/: README.md  format_notes.md  reverse_engineering_journey.md  windows_baseline_001_empty.txt  windows_baseline_001_summary.json  windows_baseline_002_one_label.txt  windows_baseline_002_summary.json
samples/: README.md
samples/002_one_label/: report.rpt
samples/003_two_labels_hello_world/: notes.md  report.rpt
samples/004_two_labels_greetings_someone/: notes.md  report.rpt
samples/005_image_in_page_header/: notes.md  report.rpt
samples/006_image_in_details/: notes.md  report.rpt
samples/007_image_and_line/: notes.md  report.rpt
samples/008_two_lines_only/: notes.md  report.rpt  source_notes.txt
samples/009_five_lines_thickness/: notes.md  report.rpt
samples/_template/: notes.md
spec/: contents.ksy
spec/elements/: line.ksy
tests/: test_aes_vector.py  test_container.py  test_decoders.py  test_golden.py
tools/: decrypt_sample.py  diff_records.py  verify_baseline.py
visualstudio_project_for_sample_rptFiles/samplereports/: samplereports.sln
visualstudio_project_for_sample_rptFiles/samplereports/samplereports/: Form1.Designer.cs  Form1.cs  Program.cs  empty.cs  empty.rpt  one_label.cs  samplereports.csproj
visualstudio_project_for_sample_rptFiles/samplereports/samplereports/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
